config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: sso
  labels:
    component: keycloak
    app: sso
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: sso
    component: keycloak
