config/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: sso
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: yourdomain.de
      http:
        paths:
          - path: /
            backend:
              serviceName: keycloak
              servicePort: 8080
